--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
     <title>Love Running</title>
 </head>
 <body>
-    <h1>test</h1>
+    <header>Header content</header>
+    <section>
+        Main Images
+    </section>
+    <section>
+        Club Ethos
+    </section>
+    <section>
+        Running, locations, distances and times
+    </section>
+    <footer>
+        Social media links here
+    </footer>
+
 </body>
 </html>
