--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Love Running</title>
 </head>
 <body>
-    <header>Header content</header>
+    <header></header>
     <section>
         <a href="index.html">
             <h1>Love Running</h1>
