--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <title>Love Running</title>
 </head>
 <body>
-    <header></header>
+    <header>
+
     <section>
         <a href="index.html">
             <h1 id="logo">Love Running</h1>
@@ -29,6 +30,9 @@
                 </li>
             </ul>
         </nav>
+    </header> 
+    <section id="hero-outer">
+        <div id="hero-image"> </div>
     </section>
     <section>
         Club Ethos
