--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <a href="#">Sign Up</a>
                 </li>
                 <li>
-                    <a href="#">Gallery</a>
+                    <a href="gallery.html" >Gallery</a>
                 </li>
                 <li>
                     <a href="index.html" class="active">Home</a>
@@ -73,11 +73,59 @@
             </div>
         </div>
     </section>
-    <section>
-        Running, locations, distances and times
+    <section id="times">
+        <div>
+            <h2>Urban <i class="fas fa-city"></i></h2>
+            <h3>Monday</h3>
+            <h3>5k</h3>
+            <h3>The Marker Hotel</h3>
+            <h3>18:30</h3>
+        </div>
+        <div>
+            <h2>Trail <i class="fas fa-tree"></i></h2>
+            <h3>Wednesday</h3>
+            <h3>10k</h3>
+            <h3>The Pheonix Park</h3>
+            <h3>18:30</h3>
+        </div>
+        <div>
+            <h2>Urban <i class="fas fa-city"></i></h2>
+            <h3>Friday</h3>
+            <h3>5k</h3>
+            <h3>The Marker Hotel</h3>
+            <h3>18:30</h3>
+        </div>
+        <div>
+            <h2>Trail <i class="fas fa-tree"></i></h2>
+            <h3>Saturday</h3>
+            <h3>10k</h3>
+            <h3>The Pheonix Park</h3>
+            <h3>09:30</h3>
+        </div>
+        <div>
+            <h2>Coffee <i class="fas fa-coffee"></i></h2>
+            <h3>Sunday</h3>
+            <h3>0k</h3>
+            <h3>The Marker Hotel</h3>
+            <h3>11:30</h3>
+        </div>
+
     </section>
     <footer>
-        Social media links here
+        <ul class="social-netwoks">
+            <li> <a href="http://facebook.com" target="_blank" rel="noopener" aria-label="Vist our facebook page 
+                (opens in a new link"><i class="fab fa-facebook"></i></a>
+            </li>
+            <li> <a href="http://twitter.com" target="_blank" rel="noopener" aria-label="Vist our twitter page 
+                (opens in a new link"><i class="fab fa-twitter"></i></a>
+            </li>
+            <li> <a href="http://youtube.com" target="_blank" rel="noopener" aria-label="Vist our youtube page 
+                (opens in a new link"><i class="fab fa-youtube"></i></a>
+            </li>
+            <li> <a href="http://instagram.com" target="_blank" rel="noopener" aria-label="Vist our instagram page 
+                (opens in a new link"><i class="fab fa-instagram"></i></a>
+            </li>
+        </ul>
     </footer>
     <!--Font awesome script-->
     <script src="https://kit.fontawesome.com/cf0c5abcb6.js" crossorigin="anonymous"></script>
